# gl-c-cpp-basecamp-2021-2

02_oop/src/SecureChat/: CMakeLists.txt
02_oop/src/SecureChat/client/: CMakeLists.txt  client.cpp  createchatform.cpp  createchatform.h  createchatform.ui  loginform.ui  mainwindow.ui  res.qrc  signupform.ui
02_oop/src/SecureChat/network/: CMakeLists.txt  NetworkDefinitions.h  network.cpp  network.h  socket.cpp  socket.h
02_oop/src/SecureChat/server/: CMakeLists.txt
